Remove unused link in autolink

--- a/public/autolink.html
+++ b/public/autolink.html
@@ -3,15 +3,12 @@
   <title>Autolink</title>
 </head>
 <body>
-  <h1>Autolink, by Ngoc Dao@<a href="http://cntt.tv/">cntt.tv</a></h1>
-
   <textarea id="input" style="width: 100%; height: 300px"></textarea><br />
-  <input type="button" id="convert" value="Convert to links" /><br />
   <div id="output"></div>
-  
+
   <script>
-    var button = document.getElementById('convert');
-    button.onclick = function() {
+    var input = document.getElementById('input');
+    input.onkeyup = function() {
       var input = document.getElementById('input');
       var output = document.getElementById('output');
       lines = input.value.split("\n");
